attempting to fix broken references

--- a/lesson-10/franklin.html
+++ b/lesson-10/franklin.html
@@ -3,25 +3,26 @@
 
     <head w3-include-html="/lesson-10/modules/head.html">
 
-</head>
 
-<body>
-    <div class="top">
-        <header w3-include-html="/lesson-10/modules/header.html">
+    </head>
 
-        </header>
+    <body>
+        <div class="top">
+            <header w3-include-html="/lesson-10/modules/header.html">
+                <h1>City of Franklin</h1>
+            </header>
 
-        <!-- site navigation use placeholder references -->
-        <nav w3-include-html="/lesson-10/modules/nav.html">
+            <!-- site navigation use placeholder references -->
+            <nav w3-include-html="/lesson-10/modules/nav.html">
 
-        </nav>
-    </div>
+            </nav>
+        </div>
 
-    <main>
-        <h2 class="city">The City of Franklin</h2>
-<!--        <figure>-->
+        <main w3-include-html="/lesson-10/modules/main.html">
 
-        <section class="content">
+            <!--        <figure>-->
+
+            <section class="content">
 <!--            <picture class="background">-->
 
 <!--            </picture>-->
@@ -97,8 +98,8 @@
     <script src="/lesson-10/js/w3.js"></script>
     <script src="/lesson-10/js/time.js"></script>
     <script src="/lesson-10/js/modularize.js"></script>
-    <script src="/lesson-10/js/nav.js"></script>
-
+    <script src="js/nav.js"></script>
+    <script src="/lesson-10/js/active.js"></script>
 
 
 </body>
