--- a/lesson-10/modules/head.html
+++ b/lesson-10/modules/head.html
@@ -1,7 +1,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Franklin Weather</title>
+<title>Weather</title>
 <meta name="author" content="Samuel Cline">
 <meta name="description" content="page description placeholder">
 <!-- external style references in the proper cascading order -->
