--- a/lesson-10/thanks.html
+++ b/lesson-10/thanks.html
@@ -4,8 +4,8 @@
         <!--    the head holds information about the website-->
         <meta charset="utf-8">
 
-        <link rel="stylesheet" href="/lesson-9/storm/css/fire.css">
-        <script src="/lesson-9/storm/js/fire.js"></script>
+        <link rel="stylesheet" href="/lesson-10/css/fire.css">
+        <script src="/lesson-10/js/fire.js"></script>
 <!--        <canvas id="canvas2"></canvas>-->
         <canvas id="canvas">Canvas is not supported in your browser.</canvas>
     </head>
@@ -16,5 +16,5 @@
 <!--        <canvas id="canvas">Canvas is not supported in your browser.</canvas>-->
 
     </body>
-    <script src="/lesson-9/storm/js/fire.js"></script>
-    <script src="/lesson-9/storm/js/thanks1.js"></script>
+    <script src="/lesson-10/js/fire.js"></script>
+    <script src="/lesson-10/js/thanks1.js"></script>
