--- a/lesson-10/gallery.html
+++ b/lesson-10/gallery.html
@@ -3,25 +3,26 @@
 
     <head w3-include-html="/lesson-10/modules/headg.html">
 
+
     </head>
 
-<body>
-    <div class="top">
-        <header w3-include-html="/lesson-10/modules/header.html">
+    <body>
+        <div class="top">
+            <header w3-include-html="/lesson-10/modules/header.html">
+                <h1>Gallery</h1>
+            </header>
 
-        </header>
+            <!-- site navigation use placeholder references -->
+            <nav w3-include-html="/lesson-10/modules/nav.html">
 
-        <!-- site navigation use placeholder references -->
-        <nav w3-include-html="/lesson-10/modules/nav.html">
+            </nav>
+        </div>
 
-        </nav>
-    </div>
+        <main w3-include-html="/lesson-10/modules/main.html">
 
-    <main>
-        <h2 class="city">The City of Franklin</h2>
-<!--        <figure>-->
+            <!--        <figure>-->
 
-        <section class="content">
+            <section class="content">
 <!--            <picture class="background">-->
 
 
@@ -57,7 +58,7 @@
     <script src="/lesson-10/js/time.js"></script>
     <script src="/lesson-10/js/modularize.js"></script>
     <script src="/lesson-10/js/nav.js"></script>
-
+    <script src="/lesson-10/js/active.js"></script>
 
 </body>
 
