--- a/lesson-10/modules/nav.html
+++ b/lesson-10/modules/nav.html
@@ -1,9 +1,9 @@
 <button class="hamburger" onclick="ham()">&#9776;</button>
-<ul class="navigation">
-    <li><a href="/index.html">Home</a></li>
-    <li class="active"><a href="/lesson-10/franklin.html">Franklin</a></li>
-    <li><a href="/lesson-10/greenville.html">Greenville</a></li>
-    <li><a href="/lesson-10/springfield.html">Springfield</a></li>
-    <li><a href="/lesson-10/storm/storm.html">Storm Center</a></li>
-    <li><a href="/lesson-10/gallery.html">Gallery</a></li>
+<ul id="mainmenu" >
+    <li><a href="index.html">Home</a></li>
+    <li><a href="franklin.html">Franklin</a></li>
+    <li><a href="greenville.html">Greenville</a></li>
+    <li><a href="springfield.html">Springfield</a></li>
+    <li><a href="storm.html">Storm Center</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
 </ul>
