added JSON references

--- a/lesson-10/gallery.html
+++ b/lesson-10/gallery.html
@@ -18,8 +18,8 @@
             </nav>
         </div>
 
-        <main w3-include-html="/lesson-10/modules/main.html">
-
+        <main>
+            <p w3-include-html="/lesson-10/modules/main1.html"></p>
             <!--        <figure>-->
 
             <section class="content">
@@ -51,11 +51,12 @@
 
     </main>
 
-    <footer w3-include-html="/lesson-8/modules/footer.html">
+    <footer w3-include-html="/lesson-10/modules/footer.html">
 
     </footer>
     <script src="/lesson-10/js/w3.js"></script>
     <script src="/lesson-10/js/time.js"></script>
+        <script src="/lesson-10/js/active.js"></script>
     <script src="/lesson-10/js/modularize.js"></script>
     <script src="/lesson-10/js/nav.js"></script>
     <script src="/lesson-10/js/active.js"></script>
