--- a/lesson-10/index.html
+++ b/lesson-10/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-us">
 
-    <head w3-include-html="/lesson-10/modules/head.html">
+<head w3-include-html="/lesson-10/modules/head.html">
 
 
 </head>
@@ -18,8 +18,8 @@
         </nav>
     </div>
 
-    <main w3-include-html="/lesson-10/modules/main.html">
-
+    <main>
+        <p w3-include-html="/lesson-10/modules/main1.html"></p>
         <!--        <figure>-->
 
         <section class="content">
