--- a/lesson-10/storm.html
+++ b/lesson-10/storm.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en-us">
 
-<head w3-include-html="/lesson-10/modules/head.html">
+    <head w3-include-html="/lesson-10/modules/head.html">
     <link href="css/storm.css" rel="stylesheet">
     <link href="css/med.css" rel="stylesheet">
     <link href="css/large1.css" rel="stylesheet">
@@ -20,8 +20,8 @@
         </nav>
     </div>
 
-    <main w3-include-html="/lesson-10/modules/main.html">
-
+    <main>
+        <p w3-include-html="/lesson-10/modules/main1.html"></p>
         <!--        <figure>-->
 
         <section class="content">
@@ -89,13 +89,13 @@
     <footer w3-include-html="/lesson-10/modules/footer.html">
 
     </footer>
-    <script src="js/w3.js"></script>
-    <script src="js/time.js"></script>
-    <script src="js/modularize.js"></script>
-    <script src="js/nav.js"></script>
-    <script src="js/rate.js"></script>
-    <script src="js/thanks.js"></script>
-    <script src="js/active.js"></script>
+    <script src="/lesson-10/js/w3.js"></script>
+    <script src="/lesson-10/js/time.js"></script>
+    <script src="/lesson-10/js/modularize.js"></script>
+    <script src="/lesson-10/js/nav.js"></script>
+    <script src="/lesson-10/js/rate.js"></script>
+    <script src="/lesson-10/js/thanks.js"></script>
+    <script src="/lesson-10/js/active.js"></script>
 
 
 </body>
