--- a/lesson-10/franklin.html
+++ b/lesson-10/franklin.html
@@ -18,8 +18,8 @@
             </nav>
         </div>
 
-        <main w3-include-html="/lesson-10/modules/main.html">
-
+        <main>
+            <p w3-include-html="/lesson-10/modules/main1.html"></p>
             <!--        <figure>-->
 
             <section class="content">
@@ -83,10 +83,19 @@
             </section>
 
             <article class="article">
+
                 <h3>Franklin Breaks Record</h3>
-                <p class="town-article">
-                    <img class="artimage" src="/lesson-5/imgs/paper1.png" alt="paper"> Franklin Breaks Record high temperature.
-                </p>
+
+                <div id="name"></div>
+                <div id="motto"></div>
+                <div id="yearFounded"></div>
+                <div id="currentPopulation"></div>
+                <div id="averageRainfall"></div>
+                <div id="events"></div>
+
+
+
+
             </article>
         </section>
 
@@ -97,9 +106,13 @@
     </footer>
     <script src="/lesson-10/js/w3.js"></script>
     <script src="/lesson-10/js/time.js"></script>
-    <script src="/lesson-10/js/modularize.js"></script>
-    <script src="js/nav.js"></script>
     <script src="/lesson-10/js/active.js"></script>
+    <script src="/lesson-10/js/modularize.js"></script>
+    <script src="/lesson-10/js/nav.js"></script>
+    <script src="/lesson-10/js/data.js"></script>
+
+
+
 
 
 </body>
