--- a/lesson-10/modules/nav.html
+++ b/lesson-10/modules/nav.html
@@ -1,5 +1,6 @@
+
 <button class="hamburger" onclick="ham()">&#9776;</button>
-<ul id="mainmenu" >
+<ul class="navigation" id="mainmenu">
     <li><a href="index.html">Home</a></li>
     <li><a href="franklin.html">Franklin</a></li>
     <li><a href="greenville.html">Greenville</a></li>
@@ -7,3 +8,4 @@
     <li><a href="storm.html">Storm Center</a></li>
     <li><a href="gallery.html">Gallery</a></li>
 </ul>
+
