added <a> to buttons on home

--- a/lesson-10/franklin.html
+++ b/lesson-10/franklin.html
@@ -4,28 +4,28 @@
     <head w3-include-html="/lesson-10/modules/head.html">
 
 
-    </head>
+</head>
 
-    <body>
-        <div class="top">
-            <header w3-include-html="/lesson-10/modules/header.html">
-                <h1>City of Franklin</h1>
-            </header>
+<body>
+    <div class="top">
+        <header w3-include-html="/lesson-10/modules/header.html">
+            <h1>City of Franklin</h1>
+        </header>
 
-            <!-- site navigation use placeholder references -->
-            <nav w3-include-html="/lesson-10/modules/nav.html">
+        <!-- site navigation use placeholder references -->
+        <nav w3-include-html="/lesson-10/modules/nav.html">
 
-            </nav>
-        </div>
+        </nav>
+    </div>
 
-        <main>
-            <p w3-include-html="/lesson-10/modules/main1.html"></p>
-            <!--        <figure>-->
+    <main>
+        <p w3-include-html="/lesson-10/modules/main1.html"></p>
+        <!--        <figure>-->
 
-            <section class="content">
-<!--            <picture class="background">-->
+        <section class="content">
+            <!--            <picture class="background">-->
 
-<!--            </picture>-->
+            <!--            </picture>-->
             <section class="summary1">
                 <h3>Weather Summary</h3>
                 <div class="highlow">
@@ -50,7 +50,9 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th class="tablehead" colspan="10"><h3>10 Day Forecast</h3></th>
+                            <th class="tablehead" colspan="10">
+                                <h3>10 Day Forecast</h3>
+                            </th>
                         </tr>
                         <tr class="days">
                             <th>Day 1</th>
@@ -105,11 +107,11 @@
 
     </footer>
     <script src="/lesson-10/js/w3.js"></script>
-    <script src="/lesson-10/js/time.js"></script>
-    <script src="/lesson-10/js/active.js"></script>
     <script src="/lesson-10/js/modularize.js"></script>
     <script src="/lesson-10/js/nav.js"></script>
     <script src="/lesson-10/js/data.js"></script>
+    <script src="/lesson-10/js/active.js"></script>
+    <script src="/lesson-10/js/time.js"></script>
 
 
 
