--- a/lesson-10/index.html
+++ b/lesson-10/index.html
@@ -38,21 +38,22 @@
                     /lesson-7/imgs/img1l.jpg 800w"></div>
 
             </section>
-            <section class="s3">
+            <a href="franklin.html"> <section class="s3">
                 <h3>Franklin</h3>
 
 
-            </section>
-            <section class="s4">
+            </section></a>
+            <a  href="greenville.html"><section class="s4">
                 <h3>Greenville</h3>
 
 
-            </section>
-            <section class="s5">
+
+            </section></a>
+            <a  href="springfield.html"><section class="s5">
                 <h3>Springfield</h3>
 
 
-            </section>
+                </section></a>
 
 
         </section>
