--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                 </li>
                 <li><a href="/lesson-10/index.html">Lesson-10</a>
                 </li>
+                <li><a href="/lesson-11/lesson2/">Lesson-10</a>
+                </li>
+                <li><a href="/lesson-11/lesson3/">Lesson-10</a>
+                </li>
+                <li><a href="/lesson-11/lesson4/">Lesson-10</a>
+                </li>
                 <li><a href="/tpc.html">TorquedPC/Flexbox TESTING</a>
                 </li>
 
