--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 </li>
                 <li><a href="/lesson-10/index.html">Lesson-10</a>
                 </li>
-                <li><a href="/lesson-11/lesson2/">Lesson-10</a>
+                <li><a href="/lesson-11/lesson2/">Lesson-11-2</a>
                 </li>
-                <li><a href="/lesson-11/lesson3/">Lesson-10</a>
+                <li><a href="/lesson-11/lesson3/">Lesson-11-3</a>
                 </li>
-                <li><a href="/lesson-11/lesson4/">Lesson-10</a>
+                <li><a href="/lesson-11/lesson4/">Lesson-11-4</a>
                 </li>
                 <li><a href="/tpc.html">TorquedPC/Flexbox TESTING</a>
                 </li>
