changed the contact page

--- a/final/sales.html
+++ b/final/sales.html
@@ -9,7 +9,7 @@
     <body>
         <div class="top">
             <header w3-include-html="/final/modules/header.html">
-                <h1>Gallery</h1>
+                <h1 class="pagetitle">Sales</h1>
             </header>
 
             <!-- site navigation use placeholder references -->
