--- a/final/contact.html
+++ b/final/contact.html
@@ -11,7 +11,7 @@
 <body>
     <div class="top">
         <header w3-include-html="/final/modules/header.html">
-            <h1>Storm Center</h1>
+            <h1>Contact Us</h1>
         </header>
 
         <!-- site navigation use placeholder references -->
@@ -29,51 +29,25 @@
             <form action="" method="post" enctype="multipart/form-data" name="weather" id="stormcenter">
                 <div class="boxes">
                     <fieldset>
-                        <legend>Your Information</legend>
+                        <h2>Your Information</h2>
                         <label><span>Full Name:</span><input name="name" type="text" value="" pattern="[a-zA-Z ._-]{3,6}" required> </label>
                         <label><span>Email:</span><input name="email" type="email" value="" placeholder="yourname@email.com"> </label>
                         <label><span>Phone Number:</span><input name="phone" type="tel" value="" placeholder="1235551234" required> </label>
                         <label><span>zip:</span><input name="phone" type="number" value="" placeholder="83440" required> </label>
-
+                        <button type="button" id="sub" onclick="thanks.js">Submit</button>
+                        <Div>
+                            <br>
+                        <p>
+                        The mountain Spoke, <br>
+                        3950 Valley Commons Dr, Bozeman, MT 59718 <br>
+                        (555) 555-1234
+                            </p>
+                        </Div>
                     </fieldset>
-
-                    <fieldset>
-                        <legend>Storm Information</legend>
-                        <label><span>Date of Sighting:</span><input name="reportdate" type="date" value="" required> </label>
-                        <label><span>Storm Type:</span><input name="type" type="text" value="" placeholder="enter storm type" list="list1"> </label>
-                        <datalist id="list1">
-                        <option value="Flash Flood"></option>
-                        <option value="Hail"></option>
-                        <option value="Huricane"></option>
-                        <option value="Thunderstorm"></option>
-                        <option value="Tornado"></option>
-                    </datalist>
-
-                        <label><span>Storm Intensity: </span><input type="range" id="rating" value="5" min="1" max="10" step="1" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
-                    <span id="ratingvalue">5</span></label>
-
-                        <label><span>Storm Region: </span></label>
-                        <select name="region">
-
-                        <option value="Select Region" selected disabled>Select Region</option>
-                        <option value="Franklin">Franklin</option>
-                        <option value="Greenville">Greenville</option>
-                        <option value="Springfield">Springfield</option>
-                    </select>
-
-                        <label><span>User in Danger?</span></label>
-                        <input name="danger" type="radio"> Yes<br>
-                        <input name="danger" type="radio"> Maybe<br>
-                        <input name="danger" type="radio"> No<br>
-                    </fieldset>
-
-                    <fieldset>
-                        <legend>Comments</legend>
-                        <textarea name="comments" rows="10" cols="30" placeholder="Please enter additional comments"></textarea>
-                    </fieldset>
-
+                    <iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2787.948738839135!2d-111.09298598422465!3d45.67192937910397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5345458559cf66a1%3A0x858c0351ba741919!2s3950+Valley+Commons+Dr%2C+Bozeman%2C+MT+59718!5e0!3m2!1sen!2sus!4v1513298602305" width="400" height="300" frameborder="0" style="border:" allowfullscreen></iframe>
+                
                 </div>
-                <button type="button" id="sub" onclick="thanks.js">Submit</button>
+                
 
 
 
