--- a/final/modules/header.html
+++ b/final/modules/header.html
@@ -1,7 +1,7 @@
-<section class='header'>
-<div class="photo"><img src="/final/imgs/logosmall.jpg" alt="Nothing" sizes="10vw" srcset="/final/imgs/logosmall.jpg 100w,
+<section class="header">
+<div class="logo"><img src="/final/imgs/logosmall.jpg" alt="Nothing" sizes="10vw" srcset="/final/imgs/logosmall.jpg 100w,
     /final/imgs/logomed.jpg 200w,
     /final/imgs/logolarge.jpg 500w"></div>
-
-<div class="subheading">Idaho's Best Bikes</div>
+<br>
+<div class="subheading">World's Best Bikes</div>
 </section>
