--- a/final/register.html
+++ b/final/register.html
@@ -33,39 +33,12 @@
                         <label><span>Full Name:</span><input name="name" type="text" value="" pattern="[a-zA-Z ._-]{3,6}" required> </label>
                         <label><span>Email:</span><input name="email" type="email" value="" placeholder="yourname@email.com"> </label>
                         <label><span>Phone Number:</span><input name="phone" type="tel" value="" placeholder="1235551234" required> </label>
+                        <label><span>Date of Birth:</span><input name="reportdate" type="date" value="" required> </label>
                         <label><span>zip:</span><input name="phone" type="number" value="" placeholder="83440" required> </label>
 
                     </fieldset>
 
-                    <fieldset>
-                        <legend>Storm Information</legend>
-                        <label><span>Date of Sighting:</span><input name="reportdate" type="date" value="" required> </label>
-                        <label><span>Storm Type:</span><input name="type" type="text" value="" placeholder="enter storm type" list="list1"> </label>
-                        <datalist id="list1">
-                        <option value="Flash Flood"></option>
-                        <option value="Hail"></option>
-                        <option value="Huricane"></option>
-                        <option value="Thunderstorm"></option>
-                        <option value="Tornado"></option>
-                    </datalist>
-
-                        <label><span>Storm Intensity: </span><input type="range" id="rating" value="5" min="1" max="10" step="1" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
-                    <span id="ratingvalue">5</span></label>
-
-                        <label><span>Storm Region: </span></label>
-                        <select name="region">
-
-                        <option value="Select Region" selected disabled>Select Region</option>
-                        <option value="Franklin">Franklin</option>
-                        <option value="Greenville">Greenville</option>
-                        <option value="Springfield">Springfield</option>
-                    </select>
-
-                        <label><span>User in Danger?</span></label>
-                        <input name="danger" type="radio"> Yes<br>
-                        <input name="danger" type="radio"> Maybe<br>
-                        <input name="danger" type="radio"> No<br>
-                    </fieldset>
+                   
 
                     <fieldset>
                         <legend>Comments</legend>
