--- a/final/events.html
+++ b/final/events.html
@@ -9,7 +9,7 @@
     <body>
         <div class="top">
             <header w3-include-html="/final/modules/header.html">
-                <h1>City of Springfield</h1>
+                <h1>Events</h1>
             </header>
 
             <!-- site navigation use placeholder references -->
@@ -26,78 +26,52 @@
 <!--            <picture class="background">-->
 
 <!--            </picture>-->
-            <section class="summary1">
-                <h3>Weather Summary</h3>
-                <div class="highlow">
-                    <p>High: 80</p>
-                    <p>Low: 20</p>
-                </div>
-                <div class="current">
-                    Sunny
-                    <picture>
-                        <img src="/lesson-5/imgs/sun.png" alt="sun">
-                    </picture>
-                </div>
-                <div class="conditions">
-                    <p>Precipitation: None</p>
-                    <p>Wind Speed: 5 MPH SE</p>
-                </div>
-            </section>
-
-            <section class="forecast">
+                <section class="content">
+                    <!--            <picture class="backgrofinal
+<!--            </picture>-->
+                    <section class="s2">
+                        <div class="photo"><img src="imgs/img1s.jpg" alt="Nothing" sizes="90vw" srcset="imgs/img1s.jpg 400w,
+                            imgs/img1m.jpg 600w,
+                            imgs/img1l.jpg 800w"></div>
 
 
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="tablehead" colspan="10"><h3>10 Day Forecast</h3></th>
-                        </tr>
-                        <tr class="days">
-                            <th>Day 1</th>
-                            <th>Day 2</th>
-                            <th>Day 3</th>
-                            <th>Day 4</th>
-                            <th>Day 5</th>
-                            <th>Day 6</th>
-                            <th>Day 7</th>
-                            <th>Day 8</th>
-                            <th>Day 9</th>
-                            <th>Day 10</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="temps">
-                            <td>89&deg;F</td>
-                            <td>87&deg;F</td>
-                            <td>78&deg;F</td>
-                            <td>75&deg;F</td>
-                            <td>72&deg;F</td>
-                            <td>72&deg;F</td>
-                            <td>79&deg;F</td>
-                            <td>83&deg;F</td>
-                            <td>85&deg;F</td>
-                            <td>89&deg;F</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
+                    </section>
 
-                <article class="article">
+                    <!--
+<section class="forecast">
 
-                    <h3>Springfield Breaks Record</h3>
 
-                    <div id="name"></div>
-                    <div id="motto"></div>
-                    <div id="yearFounded"></div>
-                    <div id="currentPopulation"></div>
-                    <div id="averageRainfall"></div>
-                    <div id="events"></div>
+
+</section>
+-->
+
+                    <article class="s1">
+
+                        <h3>Events</h3>
+                        <br>
+                        <h4>Cycle the Continental Divide</h4>
+                        <br>
+                        <p>
+                            It's Time again for our annual "Cycle the Continental Divide".
+                            This event is a intermediate to advanced ride that takes you up one side of the divide and down the other. This event tests a rider's skills and coordenation. This ride is NOT reccomended for begining or inexperianced riders.
+                            <br>
+                            <br>
+
+                            Where:Montana<br>
+                            When: May 17th at 8:45am<br>
+                            Skill level: intermediate-Advanced<br>
+                            Cost: $150<br>
+                            <br>
+                            <div class="register1"><a href="register.html">Register HERE!</a></div>
 
 
 
 
-                </article>
-        </section>
+                        </p>
+
+
+                    </article>
+                </section>
 
     </main>
 
