--- a/final/index.html
+++ b/final/index.html
@@ -27,30 +27,36 @@
 
             <!--            </picture>-->
             <section class="s1">
-                <h3>Weather Summary</h3>
-                <p>People search for this Lorem ipsum dummy copy text using all kinds of names, such as Lorem ipsum, lorem ipsum dolor sit amet, Lorem, dummy text, loren ipsum (yes, spelled wrong), Lorem ipsum sample textipsum loremlorem ipsum sample, Latin copy text, Lorem ipsum text, Latin dummy text, template text, sample text, dummy copy text, Latin sample text, HTML dummy text, Lorem ipsum dummy text, filler text or copy filling text, and many other names. Regardless of what you wish to call it, this text possibly originated in the 1500s as scrambled Latin.</p>
+                <h3>Welcome to the world's best bikes!</h3>
+                <br>
+                <p>The worlds best bicyclists from all over the country seek us out when they need the worlds best bike. Whether you're just getting started, or you're on track for the olympics, we've got you covererd.
+                    <br>
+                    <br>
+                    Because we only produce a limited number of models, this allows us to focus on the quality and performance of our products. We offer a limited LIFETIME warrenty on all our bicycles because we know we can't be beat!
+
+                </p>
             </section>
 
             <section class="s2">
 
-                <div class="photo"><img src="/lesson-7/imgs/img1s.jpg" alt="Nothing" sizes="90vw" srcset="/lesson-7/imgs/img1s.jpg 400w,
-                    /lesson-7/imgs/img1m.jpg 600w,
-                    /lesson-7/imgs/img1l.jpg 800w"></div>
+                <div class="photo"><img src="imgs/mainpics.jpg" alt="Nothing" sizes="90vw" srcset="imgs/mainpics.jpg 400w,
+                    imgs/mainpicm.jpg 600w,
+                    imgs/mainpicl.jpg 800w"></div>
 
             </section>
-            <a href="franklin.html"> <section class="s3">
-                <h3>Franklin</h3>
+            <a href="sales.html"> <section class="s3">
+                <h3>Sales</h3>
 
 
             </section></a>
-            <a  href="greenville.html"><section class="s4">
-                <h3>Greenville</h3>
+            <a  href="service.html"><section class="s4">
+                <h3>Service</h3>
 
 
 
             </section></a>
-            <a  href="springfield.html"><section class="s5">
-                <h3>Springfield</h3>
+            <a  href="contact.html"><section class="s5">
+                <h3>Contact</h3>
 
 
                 </section></a>
