--- a/final/sales.html
+++ b/final/sales.html
@@ -2,48 +2,125 @@
 <html lang="en-us">
 
     <head w3-include-html="/final/modules/headg.html">
+    <!--        <head w3-include-html="/final/modules/head.html">-->
+    <link rel="stylesheet" href="/final/css/jquery-ui.css">
+
+</head>
+
+<body>
+    <div class="top">
+        <header w3-include-html="/final/modules/header.html">
+            <h1 class="pagetitle">Sales</h1>
+        </header>
+
+        <!-- site navigation use placeholder references -->
+        <nav w3-include-html="/final/modules/nav.html">
+
+        </nav>
+    </div>
+
+    <main>
+        <p w3-include-html="/final/modules/main1.html"></p>
+        <!--        <figure>-->
+
+        <section class="content">
+            <!--            <picture class="background">-->
 
 
-    </head>
+            <div id="accordion">
+                <h3>X1</h3>
+                <section Class="content">
+                    <section class="s1">
+                        <!--                        <h3>Welcome to the wold's best bikes!</h3>-->
+                        <br>
+                        <p>
+                            The X3 is the maserati of mountain bikes. With all the latest technology, and a carbon fiber frame, not even the steepest mountain or largest rock and stand in your way. We even considered not offering warranty for this incredible work of art becase there was nothing we could do to bring it down. This king of bikes is what you want, if you already know exactly what you want.<br>
+                            <br> Cost: $1600<br> Warrenty: limited lifetime warrenty
+                        </p>
+                    </section>
 
-    <body>
-        <div class="top">
-            <header w3-include-html="/final/modules/header.html">
-                <h1 class="pagetitle">Sales</h1>
-            </header>
+                    <section class="s2">
 
-            <!-- site navigation use placeholder references -->
-            <nav w3-include-html="/final/modules/nav.html">
+                        <div class="photo2"><img src="imgs/x3s.jpg" alt="Nothing" sizes="30vw" srcset="imgs/x3s.jpg 400w,
+                            imgs/x3m.jpg 600w,
+                            imgs/x3l.jpg 800w"></div>
 
-            </nav>
-        </div>
+                    </section>
+                    <!--
+                        <p>
+                            The X3 is the maserati of mountain bikes. With all the latest technology, and a carbon fiber frame, not even the steepest mountain or largest rock and stand in your way. We even considered not offering warranty for this incredible work of art becase there was nothing we could do to bring it down. This king of bikes is what you want, if you already know exactly what you want.<br>
+                            <br>
 
-        <main>
-            <p w3-include-html="/final/modules/main1.html"></p>
-            <!--        <figure>-->
+                            Cost: $1600<br>
+                            Warrenty: limited lifetime warrenty
+                        </p>
+-->
 
-            <section class="content">
-<!--            <picture class="background">-->
+                </section>
+                <h3>X2</h3>
+                <div Class="content">
+                    <section class="s1">
+                        <!--                            <h3>Welcome to the wold's best bikes!</h3>-->
+                        <br>
+                        <p>
+                            If you're looking for more performance, then the X2 is for you. With upgraded braking, suspension and handling from the x3, the X2 is sure to impress. Dig into your corners and be confident when you need to hit the brakes. Don't worry about that rock up ahead, if you can't swerve or stop, just go right over it. With our limited lifetime warrenty you have no need to fear. <br>
+                            <br> Cost: $1100<br> Warrenty: limited lifetime warrenty
+
+                        </p>
+                    </section>
+
+                    <section class="s2">
+
+                        <div class="photo2"><img src="imgs/x2s.jpg" alt="Nothing" sizes="30vw" srcset="imgs/x2s.jpg 400w,
+                                imgs/x2m.jpg 600w,
+                                imgs/x2l.jpg 800w"></div>
+
+                    </section>
+                    <!--
+                        <p>
+                            If you're looking for more performance, then the X2 is for you. With upgraded braking, suspension and handling from the x3, the X2 is sure to impress. dig into your corners and be confident when you need to hit your brakes. Don't worry about that rock up ahead, if you can't serve or stop, just go right over it. With our limited lifetime warrenty you have no need to fear.  <br>
+                            <br>
+
+                            Cost: $1100<br>
+                            Warrenty: limited lifetime warrenty
+
+                        </p>
+-->
+
+                </div>
+                <h3>X3</h3>
+                <div class="content">
+                    <section class="s1">
+<!--                        <h3>Welcome to the wold's best bikes!</h3>-->
+                        <br>
+                        <p>
+                            The X3 is the PERFECT bike to get you on the road... er dirt... depending on how you roll. With the X3's strong performance and budget friendly price, you're all set to go anywhere and everywhere. This machine glides over the trail and loves every second of it. Built to last, this bike is worth every penny.<br>
+                            <br> Cost: $799<br> Warrenty: limited lifetime warrenty
+                        </p>
+                    </section>
+
+                    <section class="s2">
+
+                        <div class="photo2"><img src="imgs/x1s.jpg" alt="Nothing" sizes="30vw" srcset="imgs/x1s.jpg 400w,
+                                imgs/x1m.jpg 600w,
+                                imgs/x1l.jpg 800w"></div>
+
+                    </section>
+                    <!--
+                        <p>
+                            The X3 is the PERFECT bike to get you on the road... er dirt... depending on how you roll. With the X3's strong performance and budget friendly price, you're all set to go anywhere and everywhere. This machine glides over the trail and loves every second of it. Built to last, this bike is worth every penny.<br>
+                            <br>
+
+                            Cost: $799<br>
+                            Warrenty: limited lifetime warrenty
+                        </p>
+-->
+
+                </div>
 
 
-            <div class="photo"><img src="/lesson-7/imgs/img1s.jpg" alt="Nothing" sizes="90vw" srcset="/lesson-7/imgs/img1s.jpg 400w,
-                /lesson-7/imgs/img1m.jpg 600w,
-                /lesson-7/imgs/img1l.jpg 800w"></div>
-            <div class="photo"><img src="/lesson-7/imgs/img2s.jpg" alt="Nothing" sizes="90vw" srcset="/lesson-7/imgs/img2s.jpg 400w,
-                /lesson-7/imgs/img2m.jpg 600w,
-                /lesson-7/imgs/img2l.jpg 800w"></div>
-            <div class="photo"><img src="/lesson-7/imgs/img3s.jpg" alt="Nothing" sizes="90vw" srcset="/lesson-7/imgs/img3s.jpg 400w,
-                /lesson-7/imgs/img3m.jpg 600w,
-                /lesson-7/imgs/img3l.jpg 800w"></div>
-            <div class="photo"><img src="/lesson-7/imgs/img4s.jpg" alt="Nothing" sizes="90vw" srcset="/lesson-7/imgs/img4s.jpg 400w,
-                /lesson-7/imgs/img4m.jpg 600w,
-                /lesson-7/imgs/img4l.jpg 800w"></div>
-            <div class="photo"><img src="/lesson-7/imgs/img5s.jpg" alt="Nothing" sizes="90vw" srcset="/lesson-7/imgs/img5s.jpg 400w,
-                /lesson-7/imgs/img5m.jpg 600w,
-                /lesson-7/imgs/img5l.jpg 800w"></div>
-            <div class="photo"><img src="/lesson-7/imgs/img6s.jpg" alt="Nothing" sizes="90vw" srcset="/lesson-7/imgs/img6s.jpg 400w,
-                /lesson-7/imgs/img6m.jpg 600w,
-                /lesson-7/imgs/img6l.jpg 800w"></div>
+            </div>
+
 
 
 
@@ -60,6 +137,9 @@
     <script src="/final/js/modularize.js"></script>
     <script src="/final/js/nav.js"></script>
     <script src="/final/js/active.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="/final/js/accord.js"></script>
 
 </body>
 
