--- a/final/service.html
+++ b/final/service.html
@@ -9,7 +9,7 @@
     <body>
         <div class="top">
             <header w3-include-html="/final/modules/header.html">
-                <h1>City of Greenville</h1>
+                <h1>Service</h1>
             </header>
 
             <!-- site navigation use placeholder references -->
@@ -25,74 +25,34 @@
             <section class="content">
 <!--            <picture class="backgrofinal
 <!--            </picture>-->
-            <section class="summary1">
-                <h3>Weather Summary</h3>
-                <div class="highlow">
-                    <p>High: 80</p>
-                    <p>Low: 20</p>
-                </div>
-                <div class="current">
-                    Sunny
-                    <picture>
-                        <img src="/lesson-5/imgs/sun.png" alt="sun">
-                    </picture>
-                </div>
-                <div class="conditions">
-                    <p>Precipitation: None</p>
-                    <p>Wind Speed: 5 MPH SE</p>
-                </div>
+            <section class="s2">
+                <div class="photo"><img src="/imgs/servs.jpg" alt="Nothing" sizes="90vw" srcset="imgs/servs.jpg 400w,
+                    imgs/servm.jpg 600w,
+                    imgs/servl.jpg 800w"></div>
+
+
             </section>
 
+<!--
             <section class="forecast">
 
 
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="tablehead" colspan="10"><h3>10 Day Forecast</h3></th>
-                        </tr>
-                        <tr class="days">
-                            <th>Day 1</th>
-                            <th>Day 2</th>
-                            <th>Day 3</th>
-                            <th>Day 4</th>
-                            <th>Day 5</th>
-                            <th>Day 6</th>
-                            <th>Day 7</th>
-                            <th>Day 8</th>
-                            <th>Day 9</th>
-                            <th>Day 10</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="temps">
-                            <td>89&deg;F</td>
-                            <td>87&deg;F</td>
-                            <td>78&deg;F</td>
-                            <td>75&deg;F</td>
-                            <td>72&deg;F</td>
-                            <td>72&deg;F</td>
-                            <td>79&deg;F</td>
-                            <td>83&deg;F</td>
-                            <td>85&deg;F</td>
-                            <td>89&deg;F</td>
-                        </tr>
-                    </tbody>
-                </table>
+
             </section>
+-->
 
-                <article class="article">
+                <article class="s1">
 
-                    <h3>Greenville Breaks Record</h3>
+                    <h3>Service Center</h3>
+                    <br>
+                    <p>
 
-                    <div id="name"></div>
-                    <div id="motto"></div>
-                    <div id="yearFounded"></div>
-                    <div id="currentPopulation"></div>
-                    <div id="averageRainfall"></div>
-                    <div id="events"></div>
+                        Our service center is the best around, it's when you're ALSO the manufacturer.<br>
+                        In addition to serviceing our own Mountain Spoke Bicycles, we also service most other makes. When you bring your bike to The Mountain Spoke, you can be connfiedent you're getting the best queality parts and service.<br>
+                        <br>
+                        To schedule your appointment, just give us a call, or send us a message on our contact page! We are always Watching for new messages coming in, so you can be confident your voice is heard!
 
-
+                    </p>
 
 
                 </article>
@@ -100,7 +60,7 @@
 
     </main>
 
-    <footer w3-include-html="/lesson-10/modules/footer.html">
+    <footer w3-include-html="/final/modules/footer.html">
 
     </footer>
     <script src="/final/js/w3.js"></script>
