--- a/final/tours.html
+++ b/final/tours.html
@@ -9,7 +9,7 @@
 <body>
     <div class="top">
         <header w3-include-html="/final/modules/header.html">
-            <h1>City of Franklin</h1>
+            <h1>Adventure Tours</h1>
         </header>
 
         <!-- site navigation use placeholder references -->
@@ -23,79 +23,34 @@
         <!--        <figure>-->
 
         <section class="content">
-            <!--            <picture class="background">-->
+            <!--            <picture class="backgrofinal
+<!--            </picture>-->
+            <section class="s2">
+                <div class="photo"><img src="imgs/img6s.jpg" alt="Nothing" sizes="90vw" srcset="imgs/img6s.jpg 400w,
+                    imgs/img6m.jpg 600w,
+                    imgs/img6l.jpg 800w"></div>
 
-            <!--            </picture>-->
-            <section class="summary1">
-                <h3>Weather Summary</h3>
-                <div class="highlow">
-                    <p>High: 80</p>
-                    <p>Low: 20</p>
-                </div>
-                <div class="current">
-                    Sunny
-                    <picture>
-                        <img src="/lesson-5/imgs/sun.png" alt="sun">
-                    </picture>
-                </div>
-                <div class="conditions">
-                    <p>Precipitation: None</p>
-                    <p>Wind Speed: 5 MPH SE</p>
-                </div>
+
             </section>
 
-            <section class="forecast">
+            <!--
+<section class="forecast">
 
 
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="tablehead" colspan="10">
-                                <h3>10 Day Forecast</h3>
-                            </th>
-                        </tr>
-                        <tr class="days">
-                            <th>Day 1</th>
-                            <th>Day 2</th>
-                            <th>Day 3</th>
-                            <th>Day 4</th>
-                            <th>Day 5</th>
-                            <th>Day 6</th>
-                            <th>Day 7</th>
-                            <th>Day 8</th>
-                            <th>Day 9</th>
-                            <th>Day 10</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="temps">
-                            <td>89&deg;F</td>
-                            <td>87&deg;F</td>
-                            <td>78&deg;F</td>
-                            <td>75&deg;F</td>
-                            <td>72&deg;F</td>
-                            <td>72&deg;F</td>
-                            <td>79&deg;F</td>
-                            <td>83&deg;F</td>
-                            <td>85&deg;F</td>
-                            <td>89&deg;F</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
 
-            <article class="article">
+</section>
+-->
 
-                <h3>Franklin Breaks Record</h3>
+            <article class="s1">
 
-                <div id="name"></div>
-                <div id="motto"></div>
-                <div id="yearFounded"></div>
-                <div id="currentPopulation"></div>
-                <div id="averageRainfall"></div>
-                <div id="events"></div>
+                <h3>Daily Rides</h3>
+                <br>
+                <p>Our begginers riding tour is a great way to get your feet wet. This tour offers the perfect balance of fun and comfort whichs offers a great time for absolutly anyone.
+                    <br>
+                    <br>
+                    The intermediate tour is great for anyone looking for a little chalange in thier ride. For a spectacular ride that offers a more technical single track trail. Beginners are welcome but may find the challenge a bit more difficult rather than enjoyable.
 
-
+                </p>
 
 
             </article>
