--- a/final/modules/headg.html
+++ b/final/modules/headg.html
@@ -5,7 +5,7 @@
 <meta name="author" content="Samuel Cline">
 <meta name="description" content="page description placeholder">
 <!-- external style references in the proper cascading order -->
-<link href="https://fonts.googleapis.com/css?family=#" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <!-- Google API font reference -->
 <link href="css/normalize.css" rel="stylesheet">
 <!-- normalize useragent/browser defaults -->
