--- a/final/register.html
+++ b/final/register.html
@@ -11,7 +11,7 @@
 <body>
     <div class="top">
         <header w3-include-html="/final/modules/header.html">
-            <h1>Storm Center</h1>
+            <h1>Event Registration</h1>
         </header>
 
         <!-- site navigation use placeholder references -->
@@ -38,7 +38,7 @@
 
                     </fieldset>
 
-                   
+
 
                     <fieldset>
                         <legend>Comments</legend>
