Added Video Link, Fixed Titles

--- a/final/modules/footer.html
+++ b/final/modules/footer.html
@@ -2,4 +2,4 @@
     Contact Email: 123@gmail.com
 </aside>
 <p class="footer-bar">&copy;2017 All Rights Reserved | The Mountain Spoke | <span id="date"></span></p>
-<script src="/lesson-8/js/time.js"></script>
+<script src="/lesson-8/js/time.js"></script>  <a class="vid" href="https://youtu.be/_GXqr0Qrs6Q">Site Video</a>
